--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="UTF-8">
-	<meta description="Proyecto curso de diseño web">
-	<title>Plus2014:Comunidad</title>
+	<meta charset="utf-8" />
+	<meta name="description" content="Proyecto de la primera generación del 2014 del curso de diseño web online" />
+	<title>Puls2014: Comunidad de personas atractivas y sexy</title>
+	<link rel="stylesheet" href="assets/css/normalize.css" />
+	<link rel="stylesheet" href="assets/css/estilos.css" />
 </head>
 <body>
 	<header>
@@ -11,59 +13,203 @@
 			<img src="logo.png" />
 		</figure>
 		<h1>
-			Puls2014
+			Puls2014: Comunidad de personas atractivas y sexy
 		</h1>
 		<figure id="avatar">
 			<img src="avatar.jpg" />
-		</figure>	
-
+		</figure>
 	</header>
-
 	<nav>
 		<ul>
-			<li><a href="#"> Python<a></li>
-			<li><a href="#"> Html<a></li>
-			<li><a href="#"> Javascript<a></li>
-			<li><a href="#"> Css3<a></li>
-			<li><a href="#"> Django<a></li>
+			<li><a href="#">Python</a></li>
+			<li><a href="#">HTML5</a></li>
+			<li><a href="#">Javascript</a></li>
+			<li><a href="#">CSS3</a></li>
+			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#"> Publicar<a>
+				<a href="#">Publicar</a>
 			</li>
 		</ul>
 	</nav>
-
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
 				<img src="imagen.jpg" />
 			</figure>
 			<h2 class="titulo_item">
-			   <a href="#">Titulo del articulo 3 </a>
+				<a href="#">
+					Crear un login con Laravel
+				</a>
 			</h2>
-
-			 <div class="autor_item">
-			 	por <a href="#">Ana Fonseca</a>
-			 </div>  
-			 <div class="datos_item">
-			 	<a href="#" class="tag_item">pony</a>
-			 	<span class="fecha_item">
-			 		hace <strong>5</strong> min
-			 	</span>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item"></a>
-			 </div>
-
-			 <div class="votacion">
-			 	<a href="#" class="up"></a>
-			 	<a href="#" class="down"></a>
-			 </div>
-
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Facebook prueba una forma de monetizar aplicaciones para móviles
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Cómo medir tu sueño, ejercicio y geolocalizar tu vida
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Top 5 de herramientas para realizar SEO
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Máscara de recorte en humo con After Effects
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">
+					Vagrant, crea entornos de desarrollo virtualizados
+				</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>
+			<div class="votacion">
+				<a href="#" class="up">U</a>
+				720
+				<a href="#" class="down">D</a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item">X</a>
+			</div>
 		</article>
 	</section>
 	<footer>
-		<p><strong>Powered by J.Fabian Araya</strong></p>
-		<p>Mejorandola. 2014</p>
+		<p>
+			<strong>Powered by Pony®</strong>
+		</p>
+		<p>
+			mejorando.la 2014
+		</p>
 	</footer>
-
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
